# cbom-generator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  ISSUE_BZ2.md  README.md
fixtures/: .gitkeep
fixtures/plugin-keys/: .gitkeep  README.md  test-plugin-key.pem  test-plugin-key.pub
fixtures/pqc-manual/: README.md  test-ecdsa-p256.crt  test-ecdsa-p256.key  test-ecdsa-p384.crt  test-ecdsa-p384.key  test-rsa-1024.crt  test-rsa-1024.key  test-rsa-2048.crt  test-rsa-2048.key  test-rsa-3072.crt  test-rsa-3072.key  test-rsa-4096.crt  test-rsa-4096.key
fixtures/test-certificates/: README.md  minimal-apache.conf  minimal-nginx.conf  minimal-ssh.conf  test-cert.pem  test-ecdsa-p256.pem  test-ecdsa-private.pem  test-encrypted-key.pem  test-expired-key.pem  test-expired.pem  test-key.pem  test-rsa-1024-key.pem  test-rsa-1024.pem  test-rsa-2048.pem  test-self-signed-key.pem  test-self-signed.pem  test-weak-md5-key.pem  test-weak-md5.pem
include/: algorithm_metadata.h  application_scanner.h  asset_store.h  attestation.h  cache.h  cbom_serializer.h  cbom_types.h  certificate_scanner.h  cipher_suite_parser.h  component_factory.h  config.h  config_extractor.h  config_parser.h  config_types.h  crypto_parser_interface.h  crypto_registry.h  cyclonedx_converter.h  dedup.h  error_handling.h  error_remediation.h  filesystem_scanner.h  key_manager.h  key_scanner.h  normalization.h  openpgp_parser.h  package_scanner.h  path_resolver.h  path_utils.h  platform_detect.h  plugin_manager.h  plugin_schema.h  pqc_classifier.h  pqc_report.h  privacy.h  protocol_mapping.h  resource_manager.h  schema_validation.h  secure_memory.h  service_discovery.h  service_discovery_engine.h  (+10 more)
include/detection/: binary_detector.h  config_detector.h  kernel_crypto_detector.h  library_detection.h  package_detector.h  port_detector.h  process_detector.h  systemd_detector.h
plugins/: .gitkeep
plugins/embedded/: README.md
plugins/ubuntu/: activemq.yaml  apache.yaml  b2sum.yaml  bind.yaml  caddy.yaml  cassandra.yaml  containerd.yaml  couchdb.yaml  courier.yaml  dnsmasq.yaml  docker.yaml  dovecot.yaml  elasticsearch.yaml  exim.yaml  fluentd.yaml  git.yaml  grafana.yaml  haproxy.yaml  influxdb.yaml  jetty.yaml  kafka.yaml  kong.yaml  kubernetes.yaml  mariadb.yaml  md5sum.yaml  memcached.yaml  mongodb.yaml  mysql.yaml  neo4j.yaml  nginx.yaml  openconnect.yaml  openldap.yaml  openssh.yaml  openvpn.yaml  podman.yaml  postfix.yaml  postgresql.yaml  proftpd.yaml  prometheus.yaml  pure-ftpd.yaml  (+20 more)
scripts/: README.md  check-orphan-code.sh  create_plugin.sh  release.sh  validate-cbom.sh  validate-normalization.sh  validate-property-mappings.sh  validate-schemas.sh
src/: algorithm_metadata.c  application_scanner.c  asset_store.c  attestation.c  builtin_scanners.c  cache.c  cbom_serializer.c  certificate_scanner.c  cipher_suite_parser.c  component_factory.c  config.c  config_extractor.c  config_parser_registry.c  config_type_converter.c  crypto_parser_common.c  crypto_parser_jsbridge.c  crypto_parser_openssl.c  crypto_parser_stub.c  crypto_registry.c  cyclonedx_converter.c  dedup.c  error_handling.c  error_remediation.c  filesystem_scanner.c  key_manager.c  key_scanner.c  main.c  normalization.c  openpgp_parser.c  package_scanner.c  path_resolver.c  path_utils.c  platform_detect.c  plugin_manager.c  plugin_schema.c  pqc_classifier.c  pqc_report.c  privacy.c  protocol_mapping.c  provenance.h.in  (+18 more)
src/detection/: binary_detector.c  config_detector.c  kernel_crypto_detector.c  library_detection.c  package_detector.c  port_detector.c  process_detector.c  systemd_detector.c
src/parsers/: apache_parser.c  ini_parser.c  json_parser.c  nginx_parser.c  openssl_cipher_parser.c  yaml_config_parser.c
tests/: e2e_test_multi_service.sh  e2e_test_postgresql.sh  evaluation-v1.0.md  test_asset_store.c  test_binary_detector.c  test_cache.c  test_cert_scanner_focused.c  test_cert_scanner_stats.c  test_certificate_scanner.c  test_cipher_suite_parser.c  test_config.c  test_config_parsers.c  test_cross_arch_scanning.c  test_crypto_registry.c  test_cyclonedx_converter.c  test_dedup.c  test_determinism.c  test_embedded_providers.c  test_error_handling.c  test_filesystem_scanner.c  test_filesystem_scanner_integrated.c  test_filesystem_scanner_simple.c  test_fixture_integration.c  test_globals.c  test_kernel_crypto_detector.c  test_key_scanner.c  test_library_detection.c  test_normalization.c  test_package_detector.c  test_package_scanner.c  test_plugin_manager.c  test_pqc_classifier.c  test_pqc_report.c  test_privacy.c  test_privacy_attestation.c  test_privacy_simple.c  test_relationship_builder.c  test_resource_manager.c  test_resource_manager_simple.c  test_runner.c  (+9 more)
tests/config_samples/: test_apache.conf  test_nginx.conf  test_postgresql.conf
tests/fixtures/: yocto-test.manifest
tests/js/: archive.test.mjs  cert-parser.test.mjs  wasm-bridge.test.mjs
tests/misc/: analyze_cbom_keys.py  setup.sh  test_phase3.sh  validate_phase3.py  validate_phase4.py
tests/performance/: baseline_benchmark.sh
tests/performance/results/: baseline_20251117_181236.txt
tests/security/: fuzz_config_parsers.sh  fuzz_yaml_parser.sh  valgrind_full_check.sh
tests/wasm/: smoke-test.mjs
wasm/: README.md  package-lock.json  package.json
wasm/scripts/: build-wasm-deps.sh  build-web.mjs  compare-cbom.js  convert-plugins-to-json.js  package-wasm.js
wasm/src/js/: archive.js  cbom-summary.js  cert-parser.js  explorer-integration.js  index.d.ts  index.js  wasm-bridge.js
wasm/tests/: run-regression-live.sh  run-regression.sh  run-scan.mjs
wasm/tests/fixtures/: package-yocto-rootfs.sh  yocto-qemuarm64-native-reference.json
wasm/web/: index.html
